--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "https://FSFahim.github.io/TEXTUTILS",
+{
+  "homepage": "https://FSFahim.github.io/TEXTUTILS",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
